Bug 1311375 - promise reject when there is an unsettled presentation start procedure. r=smaug

MozReview-Commit-ID: AL0QeyXBwzb